pause updates and new status endpoint (#18)
* MUCH better pause code

* pause cleanup

* slopper updates, actually add pause status route

---------
